apps/base/coder/coder_http_redir.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect
  namespace: coder

spec:
  redirectScheme:
    scheme: https
    permanent: true

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-redirect
  namespace: coder
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: coder-redirect@kubernetescrd
spec:
  rules:
    - host: coder
      http:
        paths:
          - backend:
              service:
                name: coder
                port:
                  number: 80
            path: /
            pathType: Prefix
