apps/base/coder/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coder-ingress
  namespace: coder
  annotations:
    kubernetes.io/ingress.class: traefik
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: coder
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: coder
            port:
              number: 80
